# StockTradingDQN

./: .env-example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  main.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
assets/: terminal_session.txt
config/: config.yaml
data/raw/: AAPL.csv  AAPL_2020-01-01_2023-01-01.parquet  NVDA.csv  NVDA_2020-01-01_2023-01-01.parquet
docs/: ADR-001-config-format.md  ADR-002-absolute-imports.md  COST_ANALYSIS.md  EXPERIMENTS.md  PLAN.md  PRD.md  PRD_backtest.md  PRD_data.md  PRD_env.md  PRD_features.md  PRD_gui.md  PRD_network.md  PRD_sdk.md  PRD_terminal.md  PRD_training.md  PROMPTS.md  README.md  TODO.md
docs/diagrams/: architecture_data_flow.mmd  deployment.mmd  oop_layers.mmd  sequence_backtest.mmd
notebooks/: analysis.ipynb
results/analysis/: backtest_metrics.json  cross_ticker.json  double_q.json  reward_comparison.json  reward_waterfall.json  seed_variance.json  sweep.json
scripts/: ablations.py  capture_gui.py  check_file_sizes.sh  check_no_secrets.sh  compare_experiments.py  generate_results.py  parameter_sweep.py  reward_waterfall.py
src/tradedqn/: __init__.py  config.py  format.py  sdk.py  seeding.py
src/tradedqn/cli/: __init__.py  menu.py
src/tradedqn/data/: __init__.py  client.py  gatekeeper.py
src/tradedqn/env/: __init__.py  portfolio.py  reward.py  trading_env.py
src/tradedqn/features/: __init__.py  dataset.py  indicators.py  (+1 more)
tests/: conftest.py
tests/integration/: test_backtest.py  test_sdk.py  test_training.py
tests/unit/: test_agent.py  test_charts.py  test_config.py  test_data_client.py  test_dataset.py  test_format.py  test_gatekeeper.py  test_gui_controller.py  test_indicators.py  test_inference.py  test_menu.py  test_metrics.py  test_network.py  test_portfolio.py  test_preprocessor.py  test_replay_buffer.py  test_reward.py  test_rollout.py  test_seeding.py  test_tcl_setup.py  test_trading_env.py
(+15 files in other folders)
